--- a/Stenography/Stenography.csproj
+++ b/Stenography/Stenography.csproj
@@ -69,18 +69,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UserControl\DatabaseControl.cs">
+    <Compile Include="UserControls\DatabaseControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControl\DatabaseControl.Designer.cs">
+    <Compile Include="UserControls\DatabaseControl.Designer.cs">
       <DependentUpon>DatabaseControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controllers\Database.cs" />
-    <Compile Include="UserControl\ImageControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UserControl\.Designer.cs">
-      <DependentUpon>ImageControl.cs</DependentUpon>
+    <Compile Include="UserControls\ImageControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controllers\Processor.cs" />
@@ -97,16 +93,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserControl\TextControl.cs">
+    <Compile Include="UserControls\ImageControl.Designer.cs">
+      <DependentUpon>ImageControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\TextControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControl\TextControl.Designer.cs">
+    <Compile Include="UserControls\TextControl.Designer.cs">
       <DependentUpon>TextControl.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UserControl\DatabaseControl.resx">
+    <EmbeddedResource Include="UserControls\DatabaseControl.resx">
       <DependentUpon>DatabaseControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControl\ImageControl.resx">
+    <EmbeddedResource Include="UserControls\ImageControl.resx">
       <DependentUpon>ImageControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
@@ -117,7 +116,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControl\TextControl.resx">
+    <EmbeddedResource Include="UserControls\TextControl.resx">
       <DependentUpon>TextControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
